# OPCGBarranquilla

./: main.py  pyproject.toml
app/: CardTypes.py  app.py  create_dbs.py  schemas.py  scrape.py  scrape_and_build.py  sets_ids.json
app/info/: best_sets_df_sets.h5  extra_sets_df_sets.h5  other_sets_df_sets.h5  starter_sets_df_sets.h5
