[project]
name = "opcg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "joblib>=1.5.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "tables>=3.10.2",
    "uvicorn>=0.38.0",
]
